--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,9 @@ dev_dependencies:
   test: ^1.16.0
 dependencies:
   crypto: ^3.0.2
-  encrypt: ^5.0.1
   hex: ^0.2.0
   http: ^0.13.5
   logger: ^1.3.0
-  logging: ^1.1.1
   pinenacl: ^0.5.1
-  sodium: ^2.0.1
-  sodium_libs: ^2.0.0
-  sse: ^4.1.2
   universal_html: ^2.2.1
+  shared_preferences: ^2.1.2
