Updated pubspec.yaml file

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: darttonconnect
 description: A sample command-line application.
 version: 1.0.0
-# homepage: https://www.example.com
+homepage: https://github.com/romanovichim/dartTonconnect
 
 environment:
-  sdk: '>=2.18.4 <3.0.0'
+  sdk: '>=2.18.4 <4.0.0'
 
 dev_dependencies:
   lints: ^2.0.0
