Updated pubspec.yaml file Removed bin folder

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: darttonconnect
-description: A sample command-line application.
+description: Dart SDK for TON Connect.
 version: 1.0.0
 homepage: https://github.com/romanovichim/dartTonconnect
 
